# zapping90s

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  k8s-deployment.yaml  main.py  pyproject.toml
data/: init_db.py  users.json
scripts/: normalize_videos.py
static/: display.html  display.js  mobile.html  mobile.js
